# RuntimeCompiler

./: .gitignore  CMakeLists.txt  README.md  run.sh
lib/: CMakeLists.txt  tcc.cmake
lib/cpplib/: CMakeLists.txt  cpplib.cpp  cpplib.h
scripts/: cscript.c
src/: CMakeLists.txt  encoder.c  tinyccdemo.cpp  util.cpp  util.h
